src/objects/Consult_Inventory__c.object
<CustomObject>
    <description>Table that holds the inventory of consult appointments that can be assigned to lead ids.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the appointment block is active in the system</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Ons__c</fullName>
        <label>Add Ons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Treatment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Peppermint Lip Treatment</fullName>
                </value>
                <value>
                    <fullName>Hand Facial</fullName>
                </value>
                <value>
                    <fullName>Eye Treatment</fullName>
                </value>
                <value>
                    <fullName>Glycolic 30%</fullName>
                </value>
                <value>
                    <fullName>Alpha Beta</fullName>
                </value>
                <value>
                    <fullName>Retinol + C Exfoliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apt_Date__c</fullName>
        <description>Date the appointment block is for</description>
        <label>Apt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apt_Datetime__c</fullName>
        <description>Adding this field just to help out Scott with using the Excel connector.  It shouldn&apos;t really beused for anything,  and hopefully we can just pull this someday in the future.</description>
        <formula>/* reworking this...adding 7 to starting hour is not the correct way to handle this.  It fails when we have late day apts as 17 + 7 puts us into the next day
DATETIMEVALUE( TEXT(Apt_Date__c) &amp; &quot; &quot; &amp; TEXT(Start_Hour_Int__c+7)  &amp; &quot;:&quot;&amp;Start_Minute__c&amp;&quot;:00&quot;) */

DATETIMEVALUE( TEXT(Apt_Date__c) &amp; &quot; &quot; &amp; TEXT(Start_Hour_Int__c) &amp; &quot;:&quot;&amp; if(len(Start_Minute__c)=1,&quot;0&quot; &amp; Start_Minute__c,Start_Minute__c) &amp; &quot;:00&quot;) + (7/24)</formula>
        <label>Apt Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apt_Notes__c</fullName>
        <description>Any notes entered when the appointment was schedueld</description>
        <label>Apt Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <description>Timestamp for when the patient arrives at the office and begins filling out paperwork</description>
        <label>Arrival Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Holder__c</fullName>
        <description>Just using this field temporarily to hold values from the existing auto_reminder__c field.  The team has requested we switch that field from a checkbox to a picklist,  so we can have null values.  Making that change will delete all existing data,  so I need to store it elsewhere and push it back after the change.</description>
        <label>Auto Holder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the team will call with an apt reminder</description>
        <label>Auto Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callback_Consult_PEC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Callback Consult PEC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consult_Inventory3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Callback_Consult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Callback Consult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_In_Code__c</fullName>
        <label>Check In Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <description>Color Code for this appointment block on the calendar</description>
        <label>Color Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Light Green</fullName>
                </value>
                <value>
                    <fullName>Light Purple</fullName>
                </value>
                <value>
                    <fullName>Light Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Status__c</fullName>
        <description>Field to store the confirmation status for an appointment block</description>
        <label>Confirmation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                    <color>#0B6FCE</color>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Not Confirmed</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Not Confirmed</label>
                </value>
                <value>
                    <fullName>LVM</fullName>
                    <color>#E27001</color>
                    <label>LVM</label>
                </value>
                <value>
                    <fullName>Transfered</fullName>
                    <color>#FF0000</color>
                    <label>Transfered</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Completed__c</fullName>
        <description>Timestamp for when the consultation is completed</description>
        <label>Consult Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consult_PEC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PEC that handled the consult</description>
        <label>Consult PEC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consult_Inventory2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consult_Room__c</fullName>
        <description>The consult room the appointment blocks are tied to.</description>
        <label>Consult Room</label>
        <referenceTo>Consult_Rooms__c</referenceTo>
        <relationshipLabel>Consult Inventory</relationshipLabel>
        <relationshipName>Consult_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Consult_Show_Status__c</fullName>
        <description>Tracking the consultation final disposition with this field.</description>
        <label>Consult Show Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consult Completed</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Patient Left</fullName>
                </value>
                <value>
                    <fullName>Arrived</fullName>
                </value>
                <value>
                    <fullName>Ready for Consult</fullName>
                </value>
                <value>
                    <fullName>Consult Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Started__c</fullName>
        <description>Timestamp for when the patient has begun the consultation with the doctor.</description>
        <label>Consult Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOW_int__c</fullName>
        <description>Field to hold the day of the week value from a datetime format. 1 = Monday / 7 = Sunday</description>
        <label>DOW_int</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Double_Consult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A &apos;Double Consult&apos; is an appointment for a patient who is coming in for a consult with another new patient - ie, two appointments for two different people who know each and are coming in together. This field links one double consult appointment to another. In practice, if one appointment has a double consult link, the linked record should have its own double consult link pointing back to the original (and when one is removed, the other should be automatically removed as well).</description>
        <label>Double Consult</label>
        <referenceTo>Consult_Inventory__c</referenceTo>
        <relationshipLabel>Consult Inventory</relationshipLabel>
        <relationshipName>Consult_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Hour__c</fullName>
        <description>Text display for the ending hour of this appointment block</description>
        <label>End Hour</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Minute__c</fullName>
        <description>Text display for the ending minutes of the appointment block</description>
        <label>End Minute</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Agent__c</fullName>
        <description>Name of the agent from an external agency that registered this task or activity.</description>
        <label>External Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GC_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this consult offered a gift card to come in?</description>
        <label>GC Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Reschedule_Time__c</fullName>
        <description>The datetime the last reschedule event occured</description>
        <label>Last Reschedule Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Rescheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User id for the last person who rescheduled this appointment.</description>
        <label>Last Rescheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rescheduled_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leadscore_At_Schedule_Time__c</fullName>
        <description>The value in the leadscore field at the time the consult was scheduled.</description>
        <label>Leadscore At Schedule Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Time__c</fullName>
        <description>Timestamp marking when a patient left. This would be after arrival time, but prior to the consultation being completed.</description>
        <label>Left Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Show_Contacted_Notes__c</fullName>
        <description>Notes entered by the front desk when they contact a no show appointment.</description>
        <label>No Show Contacted Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Show_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a patient was contacted by the front desk after not showing up for an appointment.</description>
        <label>No Show Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_Converted__c</fullName>
        <formula>if(isnull(Scheduled_Lead__c),if(isnull(Scheduled_Account__c),0,1),if(Scheduled_Lead__r.IsConverted,1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Mobile__c</fullName>
        <description>Using this field to store the lead or account mobile phone.  This is necessary due to our use of force.com app license for the centers.  This license does not have access to the lead object,  so it has to be stored in the custom object.  will need a trigger to keep this in synch with the lead record.</description>
        <formula>if(Scheduled_Lead__c&lt;&gt;null,Scheduled_Lead__r.MobilePhone,
  if(Scheduled_Account__c&lt;&gt;null,&apos;&apos;,&apos;&apos;))</formula>
        <label>Patient_Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Name__c</fullName>
        <description>Using this field to store the lead name. This is necessary due to our use of force.com app license for the centers. This license does not have access to the lead object, so it has to be stored in the custom object. will need a trigger to keep this in synch with the lead record.</description>
        <formula>/* if(isnull(Scheduled_Lead__c),if(isnull(Scheduled_Account__c),&apos;&apos;, Scheduled_Account__r.Name),Scheduled_Lead__r.Full_Name__c) */

Scheduled_Lead__r.Full_Name__c + Scheduled_Account__r.FirstName + &apos; &apos; + Scheduled_Account__r.LastName</formula>
        <label>Patient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <description>Using this field to store the lead or account phone.  This is necessary due to our use of force.com app license for the centers.  This license does not have access to the lead object,  so it has to be stored in the custom object.  will need a trigger to keep this in synch with the lead record.</description>
        <formula>if(Scheduled_Lead__c&lt;&gt;null,Scheduled_Lead__r.Phone,
  if(Scheduled_Account__c&lt;&gt;null,Scheduled_Account__r.Phone,&apos;&apos;))</formula>
        <label>Patient Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Referral_Office__c</fullName>
        <formula>if(Scheduled_Lead__c&lt;&gt;null,Scheduled_Lead__r.Referral_Location__c, 
 if(Scheduled_Account__c&lt;&gt;null,Scheduled_Account__r.Referral_Location__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Referral Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Warranty_ID__c</fullName>
        <formula>Scheduled_Lead__r.Warranty_ID__c + Scheduled_Account__r.Warranty_ID__c</formula>
        <label>Patient Warranty ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Work__c</fullName>
        <formula>if(Scheduled_Lead__c&lt;&gt;null,Scheduled_Lead__r.Work__c, 
if(Scheduled_Account__c&lt;&gt;null,&apos;&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Work</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screen_Type__c</fullName>
        <description>Pre-Screen restrictions for this block</description>
        <label>Pre-Screen Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green/Yellow</fullName>
                </value>
                <value>
                    <fullName>Green/Yellow Only</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Red/Blue Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ready_Time__c</fullName>
        <description>Timestamp that indicates when the patient has finished filling out their paperwork and is ready to be seen by the PEC</description>
        <label>Ready Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a scheduled consult. Team needs the ability to schedule these as we sometimes convert a lead and then have them come back for a second (or third etc) consult.</description>
        <label>Scheduled Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consult Inventory</relationshipLabel>
        <relationshipName>Consult_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead scheduled in this appointment block</description>
        <label>Scheduled Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Consult Inventory</relationshipLabel>
        <relationshipName>Consult_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Patient</label>
        <referenceTo>Private_Practice_Patient__c</referenceTo>
        <relationshipLabel>Consult Inventory</relationshipLabel>
        <relationshipName>Consult_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <description>Time the appointment was scheduled</description>
        <label>Scheduled Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who scheduled this appointment</description>
        <label>Scheduled by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consult_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Holder__c</fullName>
        <description>Just using this field temporarily to hold values from the existing auto_reminder__c field.  The team has requested we switch that field from a checkbox to a picklist,  so we can have null values.  Making that change will delete all existing data,  so I need to store it elsewhere and push it back after the change.</description>
        <label>Send Holder</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls whether or not the system will send an automatic text reminder to the patient</description>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Initiative__c</fullName>
        <label>Special Initiative</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Firm Appt Date</fullName>
                </value>
                <value>
                    <fullName>Group Consult</fullName>
                </value>
                <value>
                    <fullName>Hard Stop</fullName>
                </value>
                <value>
                    <fullName>Orange Crush</fullName>
                </value>
                <value>
                    <fullName>Ruby Red</fullName>
                </value>
                <value>
                    <fullName>Wait List</fullName>
                </value>
                <value>
                    <fullName>White Glove</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>V2</fullName>
                </value>
                <value>
                    <fullName>Red Rally</fullName>
                </value>
                <value>
                    <fullName>Double Decker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Hour_Int__c</fullName>
        <description>Integer Value of Start Hour</description>
        <formula>Value( Start_Hour__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Hour Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Hour__c</fullName>
        <description>Text display for the starting hour of the appointment block</description>
        <label>Start Hour</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Minute_Int__c</fullName>
        <description>Integer value of starting minute field</description>
        <formula>value( Start_Minute__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Minute Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Minute__c</fullName>
        <description>text display for the starting minutes of this appointment block</description>
        <label>Start Minute</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_By_Someone_Else__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the consultation started by someone else?</description>
        <label>Started By Someone Else</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to track if the show status changes were exported to the lead record where possible.</description>
        <label>Status Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the template apt id that this block was generated by. This will be used in case the origional template appointment is adjusted and we want to modify any open blocks tied to it.</description>
        <label>Template Apt ID</label>
        <referenceTo>Template_Apt__c</referenceTo>
        <relationshipLabel>Consult Inventory</relationshipLabel>
        <relationshipName>Consult_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <description>Type of operation the patient is coming in for a consult on</description>
        <label>Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complimentary Consult</fullName>
                </value>
                <value>
                    <fullName>Complimentary Injectables w/Consult</fullName>
                </value>
                <value>
                    <fullName>Complimentary Laser w/Consult</fullName>
                </value>
                <value>
                    <fullName>Complimentary Skin Care w/Consult</fullName>
                </value>
                <value>
                    <fullName>Medi Facial</fullName>
                </value>
                <value>
                    <fullName>Neurotoxin</fullName>
                </value>
                <value>
                    <fullName>Dermal Filler</fullName>
                </value>
                <value>
                    <fullName>Deoxycholic Acid</fullName>
                </value>
                <value>
                    <fullName>IPL</fullName>
                </value>
                <value>
                    <fullName>Sublime</fullName>
                </value>
                <value>
                    <fullName>Sublative</fullName>
                </value>
                <value>
                    <fullName>LHR</fullName>
                </value>
                <value>
                    <fullName>Neurotoxin/Filler</fullName>
                </value>
                <value>
                    <fullName>Numbing</fullName>
                </value>
                <value>
                    <fullName>Microblading</fullName>
                </value>
                <value>
                    <fullName>Chemical Peels</fullName>
                </value>
                <value>
                    <fullName>Microneedling</fullName>
                </value>
                <value>
                    <fullName>Waxing</fullName>
                </value>
                <value>
                    <fullName>Dermaplane</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>AO4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PEC that handled the consult</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consult_Inventory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Walk_Out_Reason__c</fullName>
        <label>Walk Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Long Wait</fullName>
                </value>
                <value>
                    <fullName>No Reason</fullName>
                </value>
                <value>
                    <fullName>Patient Late for Consult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_Patient_Show__c</fullName>
        <description>indicates the scheduling agent thought the patient would show up for the consult</description>
        <label>Will Patient Show?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_Patient_Start__c</fullName>
        <description>Indicates if the scheduling agent thought the patient would end up starting or not</description>
        <label>Will Patient Start?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isConsultArrived__c</fullName>
        <formula>if( ISNULL(Arrival_Time__c) ,0,1)</formula>
        <label>isConsultArrived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isConsultScheudled__c</fullName>
        <description>Shoudl be a 1 when a consult is scheduled or 0 when not.</description>
        <formula>if( Scheduled_Lead__c != null || Scheduled_Account__c != null ||  Scheduled_Patient__c != null, 1, 0)</formula>
        <label>isConsultScheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isValidCallBack__c</fullName>
        <formula>if( Callback_Consult__c, 
if( ISBLANK(Consult_PEC__c),false, 
if(Consult_PEC__c&lt;&gt;Callback_Consult_PEC__c,false,true) 
) , false)</formula>
        <label>isValidCallBack</label>
        <type>Checkbox</type>
    </fields>
    <label>Consult Inventory</label>
    <listViews>
        <fullName>CEC</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Scheduled_Patient__c</columns>
        <columns>Scheduled_Account__c</columns>
        <columns>Apt_Date__c</columns>
        <columns>Treatment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Consult_Room__c</field>
            <operation>equals</operation>
            <value>GLO Room 1</value>
        </filters>
        <filters>
            <field>Scheduled_Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Scheduled_Patient__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>CEC</label>
    </listViews>
    <nameField>
        <label>Consult Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consult Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>